data/all_generated_tests/raw_wast_tests/nop_InfiniteLoops_253.wast
;; 4. **Test Description**: Set up a loop containing multiple `nop` instructions interspersed with `br_if` conditions breaking the loop after certain iterations.    - **Constraint**: Tests the cumulative effect of multiple `nop` instructions on loop control flow.    - **Relation to Infinite Loops**: Ensures that repeated `nop` instructions do not cause the loop to incorrectly continue infinitely.

(assert_invalid
  (module
    (func $loop-nops (result i32)
      (loop $block
        (nop)
        (br_if $block (i32.const 0))
        (nop)
        (br_if $block (i32.const 1))
        (nop)
        (br_if $block (i32.const 0))
        (nop)
        (br_if $block (i32.const 1)))
      (i32.const 42)))
  "type mismatch"
)